# filefuser

./: .gitignore  Cargo.toml  Makefile  README.md  deps.edn
.github/workflows/: build.yaml  ci.yaml  release.yaml
src/: args.rs  dirscan.rs  file_info.rs  io_utils.rs  logging.rs  main.rs
src/file_data/: claude.rs  core.rs  extractor_impl.rs  mod.rs  model.rs
src/filefuser/: core.clj
src/fs/: async_fs.rs  mod.rs  simple_async_fs.rs
src/io/: core.rs  eml.rs  mod.rs
