[package]
name = "filefuser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.31"
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
log = "0.4.26"
env_logger = "0.10.2"
walkdir = "2"
futures = "0.1.31"
uuid = {  version = "0.8.2" , features = ["v4"] }
chrono = "0.4.40"